--- a/src/shared/assets/main.css
+++ b/src/shared/assets/main.css
@@ -22,7 +22,8 @@
     --color-black-3p: oklch(0 0 0 / 3%);
     --color-black-10p: oklch(0 0 0 / 10%);
     --color-black-60p: oklch(0 0 0 / 60%);
-    
+    --color-black-40p: oklch(0 0 0 / 40%);
+
     --color-accent: oklch(0.72 0.21 52.14);
     --color-error: oklch(0.61 0.27 27.92);
 
@@ -33,6 +34,7 @@
 
     --color-text-base: light-dark(var(--color-black), var(--color-white));
     --color-text-secondary: light-dark(var(--color-black-60p), oklch(0.8 0 0));
+    --color-text-tertiary: light-dark(var(--color-black-40p), oklch(0.6 0 0));
     --color-text-accent: var(--color-accent);
     --color-text-error: var(--color-error);
 
